# python-helpers

./: .gitignore  Dockerfile  Makefile  README.md  create_environment.sh  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  requirements_versions.txt  setup.cfg  setup.py
.github/workflows/: tests.yaml
archive/: sklearn_search_bayesian_classification.py  sklearn_search_bayesian_regression.py
archive/misc/: dev-environment-requirements.txt
archive/sklearn_search/: BayesianSearchSpace_search_spaces.txt  BayesianSearchSpace_search_spaces__regression.txt  ExtraTreesBayesianSearchSpace_search_spaces__default.txt  ExtraTreesBayesianSearchSpace_search_spaces__modified.txt  LinearSVCBayesianSearchSpace_search_spaces__default.txt  RandomForestBayesianSearchSpace_param_name_mappings.txt  XGBoostBayesianSearchSpace_param_name_mappings.txt  XGBoostBayesianSearchSpace_search_spaces__modified.txt  linear_svc_search_spaces__modified.txt  multi-model-many-XGBClassifier.html  multi-model-many-num_rows.html  multi-model-many-trial_labels_sorted.txt  multi-model-many.yaml  multi-model-search-dataframe.html  multi-model-search-dataframe__logistic.html  multi-model-search-labeled_dataframe__label.txt  multi-model-search.yaml  trial_labels_not_sorted.txt
docstring_markdown/: build_markdown.py  custom_command.py  documentation.md
examples/: examples.ipynb
helpsk/: Assertion.py  ExampleClass.py  Strings.py  __init__.py  assertion.py  color.py  conversions.py  database.py  database_base.py  date.py  diff.py  example_class.py  exceptions.py  logging.py  pandas.py  pandas_style.py  plot.py  sklearn.py  sklearn_eval.py  sklearn_pipeline.py  sklearn_search.py  sklearn_search_base.py  sklearn_search_bayesian.py  sklearn_search_bayesian_base.py  sklearn_search_bayesian_classification.py  sklearn_search_bayesian_regression.py  string.py  text.py  utility.py  validation.py
tests/: conftest.py  helpers.py  test_Assertion.py  test_ExampleClass.py  test_String.py  test_Strings.py  test_assertion.py  test_color.py  test_conversions.py  test_database.py  test_database_sqlite.py  test_date.py  test_diff.py  test_docstring_markdown.py  test_example.py  test_logging.py  test_pandas.py  test_pandas_plot.py  test_pandas_style.py  test_plot.py  test_sklearn.py  test_sklearn_eval.py  test_sklearn_eval.py.old  test_sklearn_search.py  test_string.py  test_text.py  test_utility.py  test_validation.py
tests/test_data/: credit.csv  credit.pkl  housing.csv  housing.pkl  titanic.pkl
tests/test_files/: execute_build__expected_documentation.md  execute_build__expected_documentation__no_toc.md  sample_snowflake.config  test_non_numeric_summary__credit.txt  test_non_numeric_summary__sample.txt  test_non_numeric_summary__style__credit.html  test_non_numeric_summary__style__sample.html  test_numeric_summary__credit.txt  test_numeric_summary__sample.txt  test_numeric_summary__style__credit.html  test_plot.py  (+2 more)
(+165 files in other folders)
