[project]
name = "helpsk"
version = "0.1.59"
description = "Python helper functions and classes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly-express>=0.4.1",
    "plotly>=6.0.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=18.1.0",
    "snowflake-connector-python",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["helpsk"]

[build-system]
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
