[metadata]
name = kercheval
version = 0.0.1
author = Shane Kercheval
author_email = shane.kercheval@gmail.com
description = Python Helpers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shanekercheval/python-helpers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
