[metadata]
name = helpsk
version = 0.0.9
author = Shane Kercheval
author_email = shane.kercheval@gmail.com
description = Python helper functions and classes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shanekercheval/python-helpers
project_urls =
    Bug Tracker = https://github.com/shanekercheval/python-helpers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    python-dateutil
    numpy
    pandas
    scikit-learn
    matplotlib
    seaborn
